Edited wiki page through web user interface.

--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -1,8 +1,10 @@
 = Instructions =
 
 SVN过滤列表:
-*'*.sln *.suo *.user *.bak *.sql .cache .project *.db  .settings *.zip *.rar *~ *.txt cache obj bin'
+{{{
+*.sln *.suo *.user *.bak *.sql .cache .project *.db  .settings *.zip *.rar *~ *.txt cache obj bin'
+}}}
 
 = Details =
-#'2009.12.05 Demo Version 0.3 完成基本菜单逻辑 朱老师已阅'
-#'2010.01.06 版本2 完成添加动画元素'
+# 2009.12.05 Demo Version 0.3 完成基本菜单逻辑 朱老师已阅
+# 2010.01.06 版本2 完成添加动画元素
