--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -1,7 +1,7 @@
 = 更新日志 =
 
-  # 2009.12.05 Demo Version 0.3 完成基本菜单逻辑 朱老师已阅
+  * 2009.12.05 Demo Version 0.3 完成基本菜单逻辑 朱老师已阅
 
-  # 2010.01.06 r2 完成添加动画元素
+  * 2010.01.06 r2 完成添加动画元素
 
-  # 2010.01.07 r12 增加了宝箱等其他对象的平滑移动和事件触发,增加了站立的图片,并能正确显示,完成初步代码重构
+  * 2010.01.07 r12 增加了宝箱等其他对象的平滑移动和事件触发,增加了站立的图片,并能正确显示,完成初步代码重构
