--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -5,3 +5,5 @@
   * 2010.01.06 r2 完成添加动画元素
 
   * 2010.01.07 r12 增加了宝箱等其他对象的平滑移动和事件触发,增加了站立的图片,并能正确显示,完成初步代码重构
+
+  * 2010.01.08 r30 完成Chaining页面基本功能,可以进行文本输入游戏,封装了数据库连接,可以进行数据库交互.
