--- a/wiki/ToDoList.wiki
+++ b/wiki/ToDoList.wiki
@@ -4,16 +4,18 @@
 
   * ~~Adventure页面基本功能~~ *DONE*
 
-  * GameMain页面基本功能
+  * ~~GameMain页面基本功能~~ *具体形式待完善*
 
   * ~~Chaining页面读取数据库 完成游戏逻辑 文本框输入~~ *DONE*
 
-  * Menu页面逻辑,FirstTime-Register,Otherowise-GameMain
-
-  * 完善Register页面:复选框默认选项,图片,文本框合法性检查
+  * 封装所有动画操作到Globle
 
   * 完善存档XML,实现游戏信息的正确存取
 
   * Shopping页面基本功能
 
   * LoadGame页面基本功能
+
+  * Menu页面逻辑,FirstTime-Register,Otherowise-GameMain
+
+  * 完善Register页面:复选框默认选项,图片,文本框合法性检查
