--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -1,9 +1,11 @@
 = 更新日志 =
 
-  * 2009.12.05 Demo Version 0.3 完成基本菜单逻辑 朱老师已阅
+  * 2009.12.05 r1 完成程序基本逻辑框架
 
   * 2010.01.06 r2 完成添加动画元素
 
-  * 2010.01.07 r12 增加了宝箱等其他对象的平滑移动和事件触发,增加了站立的图片,并能正确显示,完成初步代码重构
+  * 2010.01.07 r12 增加了宝箱等其他对象的平滑移动和事件触发;增加了站立的图片并能正确显示;完成初步代码重构.
 
-  * 2010.01.08 r30 完成Chaining页面基本功能,可以进行文本输入游戏,封装了数据库连接,可以进行数据库交互.
+  * 2010.01.08 r30 完成Chaining页面基本功能;可以进行文本输入游戏;封装了数据库连接,可以进行数据库交互.
+
+  * 2010.01.08 r31 完善了GameMain页面;添加了若干新图片资源;更改字体为汉仪丫丫体简;更改按钮样式为鼠标经过放大.
