Edited wiki page through web user interface.

--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -10,4 +10,4 @@
 
   * 2010.01.08 r33 完善了GameMain页面;添加了若干新图片资源;更改字体为汉仪丫丫体简;更改按钮样式为鼠标经过放大.
 
-  * 2010.01.06 r38 完善了Chaining页面,修正了所有已知错误,优化了在相同首字母下的成语随机性,留出了道具接口; 基本实现了LoadGame页面和Shopping页面,实现了简单的数据绑定. 
+  * 2010.01.06 r38 完善了Chaining页面,修正了所有已知错误;优化了在第一个字相同下的成语随机性;留出了道具接口; 基本实现了LoadGame页面和Shopping页面,并实现了简单的数据绑定. 
