--- a/wiki/ToDoList.wiki
+++ b/wiki/ToDoList.wiki
@@ -14,14 +14,14 @@
   
   * ~~Shopping页面和LoadGame页面的基本数据绑定~~ *DONE*
 
-  * Menu页面逻辑,FirstTime-Register,Otherwise-GameMain
+  * ~~Menu页面逻辑,FirstTime-Register,Otherwise-GameMain~~ *DONE*
 
+  * ~~封装所有动画操作到Globle~~ *DONE*
+
+  * ~~完善存档XML,实现游戏信息的正确存取~~ *DONE*
+ 
   * 完善Register页面:复选框默认选项,图片,文本框合法性检查
 
-  * 封装所有动画操作到Globle
-
-  * 完善存档XML,实现游戏信息的正确存取
- 
   * 分解整理搜集处理图片资源
 
   * 添加图片资源,美化程序界面和细节
