--- a/wiki/ToDoList.wiki
+++ b/wiki/ToDoList.wiki
@@ -19,8 +19,14 @@
   * ~~封装所有动画操作到Globle~~ *DONE*
 
   * ~~完善存档XML,实现游戏信息的正确存取~~ *DONE*
- 
+
   * 完善Register页面:复选框默认选项,图片,文本框合法性检查
+ 
+  * 存档XML文件合法性检查
+
+  * 继续扩展动画基类的功能,增加功能,提高易用性和健壮性
+ 
+  * 提高ImageCut函数的效率
 
   * 分解整理搜集处理图片资源
 
