Edited wiki page through web user interface.

--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -10,4 +10,8 @@
 
   * 2010.01.08 r33 完善了GameMain页面;添加了若干新图片资源;更改字体为汉仪丫丫体简;更改按钮样式为鼠标经过放大.
 
-  * 2010.01.06 r38 完善了Chaining页面,修正了所有已知错误;优化了在第一个字相同下的成语随机性;留出了道具接口; 基本实现了LoadGame页面和Shopping页面,并实现了简单的数据绑定. 
+  * 2010.01.09 r38 完善了Chaining页面,修正了所有已知错误;优化了在第一个字相同下的成语随机性;留出了道具接口; 基本实现了LoadGame页面和Shopping页面,并实现了简单的数据绑定. 
+
+  * 2010.01.10 r42 完成了背景动画的封装和代码重构;重新组织目录;MapInf定义了地图信息;做好了其他需要绑定XML页面的接口.
+ 
+  * 2010.01.11 r45 封装完毕背景元素的加载;封装完毕精灵用户控件;完成了与存档XML的数据交互;完成了游戏过程中的数据流程;添加了新的资源文件.
