Edited wiki page through web user interface.

--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -1,5 +1,7 @@
 = 更新日志 =
 
+== 游戏UI部分 ==
+
   * 2009.12.05 r1 完成程序基本逻辑框架
 
   * 2010.01.06 r2 完成添加动画元素
@@ -15,3 +17,11 @@
   * 2010.01.10 r42 完成了背景动画的封装和代码重构;重新组织目录;MapInf定义了地图信息;做好了其他需要绑定XML页面的接口.
  
   * 2010.01.11 r45 封装完毕背景元素的加载;封装完毕精灵用户控件;完成了与存档XML的数据交互;完成了游戏过程中的数据流程;添加了新的资源文件.
+
+== HTK封装部分 ==
+
+  * 2010.01.12 用一种变通的方式解决了HTK到C#可用的DLL的问题.
+
+  * 2010.01.13 训练好了一个简单的Yes/No模型.
+
+  * 2010.01.13 将封装好的DLL和简单模型在C#命令行下成功运行.
