Edited wiki page through web user interface.

--- a/wiki/ToDoList.wiki
+++ b/wiki/ToDoList.wiki
@@ -1,6 +1,6 @@
 = To Do List =
 
-== First Stage==
+== 游戏UI部分 ==
 
   * ~~动画元素的实现~~ *DONE*
 
@@ -33,15 +33,24 @@
   * 考虑留出适当的语音接口
 
 
-== Second Stage==
+
+== HTK部分 ==
+
+  * ~~完成了对HTK的DLL封装~~ *DONE*
+
+  * 导入简单模型对C#下的DLL进行合适的调用
+  
+  * 把DLL形式的HTK整合进游戏中
 
   * 对加了pitch的HTK进行测试,生成修改后HTK的性能和准确度测试报告
 
-  * 完成对HTK的DLL封装
 
-  * 把DLL形式的HTK整合进成语接龙游戏中
+== Pitch部分 ==
 
-== Third Stage==
+  * 待编辑...
+
+
+== 其他 ==
 
   * 搜集处理图片,声音等多媒体资源
 
