--- a/wiki/Tips.wiki
+++ b/wiki/Tips.wiki
@@ -1,6 +1,12 @@
 #summary 项目中需要注意的问题
 
-= WPF页面继承要点 =
+= Tips = 
+
+ * x64平台下的编译选项要选择Any CPU *x86*
+
+= WPF部分 =
+
+== WPF页面继承要点 ==
 
  * 基页面必须全用 *CS* 代码方式实现，不能用*XAML* 编写
 
@@ -10,3 +16,18 @@
  <game:GamePage xmlns:game="clr-namespace:Demo">
  </game:GamePage>
 }}}
+
+
+= HTK部分 =
+
+== 编译 ==
+
+ * 所有编译任务进行之前要注意换行符编码,win下以CR/LF表示换行，而linux的换行符是LF,二者区别请Google.
+ 
+ * HSLab在HTK3.3之后的版本不能在Windows系统下正常使用,但编译没有问题.
+ 
+
+== 封装 ==
+
+
+= 其他 =
