Edited wiki page through web user interface.

--- a/wiki/ToDoList.wiki
+++ b/wiki/ToDoList.wiki
@@ -47,11 +47,12 @@
 
 == Pitch部分 ==
 
-  * 整理Pitch算法,写成完整的函数
+  * 整理Pitch算法,写成完整的函数 *DONE*
 
-  * 将Pitch加入HTK
+  * 将Pitch加入HTK *DONE*
 
   * 测试Pitch的正确性,并修改
+
 
 == 其他 ==
 
