Edited wiki page through web user interface.

--- a/wiki/Tips.wiki
+++ b/wiki/Tips.wiki
@@ -24,7 +24,7 @@
 
  * 所有编译任务进行之前要注意换行符编码,win下以CR/LF表示换行，而linux的换行符是LF,二者区别请Google.
  
- * HSLab在HTK3.3之后的版本不能在Windows系统下正常使用,但编译没有问题.
+ * HSLab在Win32系统下使用HGraf_WIN32.c编译，不要使用HGraf.null.c和HGraf.c。
  
 
 == 封装 ==
