Edited wiki page through web user interface.

--- a/wiki/Tips.wiki
+++ b/wiki/Tips.wiki
@@ -24,10 +24,14 @@
 
  * 所有编译任务进行之前要注意换行符编码,win下以CR/LF表示换行，而linux的换行符是LF,二者区别请Google.
  
- * HSLab在Win32系统下使用HGraf_WIN32.c编译，不要使用HGraf.null.c和HGraf.c。
+ * HSLab在Win32系统下使用HGraf_WIN32.c编译，不要使用HGraf.null.c和HGraf.c；在vs2008中默认编码为Unicode，此时生成的HSLab显示为乱码，要修正这个问题，要把HTKLib和HTKTools的编译选项中的Property->Configuration Proproties->General->Character Set设为Not Set。
 
  * HTKLib一般被编译成静态库，项目的Property->Configuration Proproties->General->Configuration Type为Static Libraray
+
+ 
 == 封装 ==
 
+  * VS2008中奇怪问题：要把HTK封装成c#可以调用的DLL，需要设置Property->Configuration Proproties->General->Common Language Runtime support为Common Language Runtime Support(/clr)，这是一般会出现错误cl : Command line error D8045 : cannot compile C file '.\esig_asc.c' with the /clr option，经查阅文档可知/clr选项需要所编译代码为c++形式，所以Property->Configuration Proproties->C/C++->Advanced->Compile As需要设为Compile as C++ Code(/TP)，但VS2008默认此项就是如此，经常是发现只要把此选项改为Default编译一下，遇到同样错误后再把该选项改回来就可以正常编译了。
 
+  *
 = 其他 =
