Edited wiki page through web user interface.

--- a/wiki/ToDoList.wiki
+++ b/wiki/ToDoList.wiki
@@ -53,6 +53,10 @@
 
 == 其他 ==
 
+  * ~~对数据库的注音处理(如: 爱不释手 ài  bù  shì  shǒu 转化为ai4bu4shi4shou3)~~ *DONE*
+
+  * 过滤掉数据库中字数过长和包含生僻字的成语
+
   * 搜集处理图片,声音等多媒体资源
 
   * 添加图片资源,美化程序界面和细节
