Edited wiki page through web user interface.

--- a/wiki/ToDoList.wiki
+++ b/wiki/ToDoList.wiki
@@ -22,23 +22,27 @@
 
   * ~~完善存档XML,实现游戏信息的正确存取~~ *DONE*
 
-  * 完善Register页面:复选框默认选项,图片,文本框合法性检查
+  * ~~完善Register页面:复选框默认选项,图片,文本框合法性检查~~ *DONE*
  
   * 存档XML文件合法性检查
 
-  * 继续扩展动画基类的功能,增加功能,提高易用性和健壮性
+  * ~~继续扩展动画基类的功能,增加功能,提高易用性和健壮性~~ *DONE*
  
-  * 提高ImageCut函数的效率
+  * ~~考虑留出适当的语音接口~~ *DONE*
 
-  * 考虑留出适当的语音接口
+  * ~~数据库操作代码重构~~ *DONE*
+
+  * ~~Chaining页面重写~~ *DONE*
+
+
 
 == HTK部分 ==
 
   * ~~完成了对HTK的DLL封装~~ *DONE*
 
-  * 导入简单模型对C#下的DLL进行合适的调用
+  * ~~导入简单模型对C#下的DLL进行合适的调用~~ *DONE*
   
-  * 把DLL形式的HTK整合进游戏中
+  * ~~把DLL形式的HTK整合进游戏中~~ *DONE*
 
   * 对加了pitch的HTK进行测试,生成修改后HTK的性能和准确度测试报告
 
@@ -55,7 +59,9 @@
 
   * ~~对数据库的注音处理(如: 爱不释手 ài  bù  shì  shǒu 转化为ai4bu4shi4shou3)~~ *DONE*
 
-  * 过滤掉数据库中字数过长和包含生僻字的成语
+  * ~~过滤掉数据库中字数过长和包含生僻字的成语~~ *DONE*
+
+  * ~~确定最终成语数据库有效词条3749个~~ *DONE*
 
   * 搜集处理图片,声音等多媒体资源
 
