--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -18,6 +18,8 @@
  
   * 2010.01.11 r45 封装完毕背景元素的加载;封装完毕精灵用户控件;完成了与存档XML的数据交互;完成了游戏过程中的数据流程;添加了新的资源文件.
 
+  * 2010.03.28 r67 添加了语音识别引擎;完成了声学模型训练,词典和网络的生成;整个所有模块到主分支中.
+
 == HTK封装部分 ==
 
   * 2010.01.12 用一种变通的方式解决了HTK到C#可用的DLL的问题.
@@ -25,3 +27,5 @@
   * 2010.01.13 训练好了一个简单的Yes/No模型.
 
   * 2010.01.13 将封装好的DLL和简单模型在C#命令行下成功运行.
+
+  * 2010.03.28 整个ATK封装到托管DLL完毕,设置好了应用所需接口.
