Edited wiki page through web user interface.

--- a/wiki/ToDoList.wiki
+++ b/wiki/ToDoList.wiki
@@ -34,6 +34,7 @@
 
   * ~~Chaining页面重写~~ *DONE*
 
+  * ~~修改小狗动画实现方式，使之更流畅~~ *DONE*
 
 
 == HTK部分 ==
@@ -45,6 +46,8 @@
   * ~~把DLL形式的HTK整合进游戏中~~ *DONE*
 
   * 对加了pitch的HTK进行测试,生成修改后HTK的性能和准确度测试报告
+
+  * 优化ATK识别引擎的识别参数，使其达到最优的去噪和识别效果
 
 == Pitch部分 ==
 
@@ -66,3 +69,5 @@
   * 搜集处理图片,声音等多媒体资源
 
   * 添加图片资源,美化程序界面和细节
+
+  * 找出可能使游戏崩溃的原因，增强健壮性
